项目初步完成

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="../css/index.css" />
   <script src="../js/jquery-3.1.1.min.js"></script>
   <script src="../js/Page.js"></script>
+  <script src="../js/common.js"> </script>
   <title>Document</title>
   <style></style>
 </head>
@@ -18,9 +19,9 @@
     <div class="header-top w">
       <div class="header_top_box">
         <ul class="header_top_left">
-          <li>欢迎来 到聚美！</li>
+          <li class="heads">欢迎来 到聚美！</li>
           <li></li><a href="../html/login.html">请登录</a></li>
-          <li><a href="">快速注册</a></li>
+          <li><a href="../html/zhuche.html">快速注册</a></li>
         </ul>
 
         <ul class="header_top_right ">
@@ -78,7 +79,7 @@
 
       <div class="cart_box">
         <img src="http://p0.jmstatic.com/assets/cart.gif" width="28" height="28" class="cart_gif">
-        <span class="text">去购物车结算</span>
+        <span class="text"><a href="../html/shoppingCar.html">去购物车结算</a></span>
         <span class="num" style="display: none;"></span>
         <a href=""></a>
       </div>
@@ -163,73 +164,25 @@
 
   </div>
 
-  <!-- <div class="float_right">
-    <ul class="float_right1">
-      <li class="li1"><a href=""><i class="iconfont iconhuaban361"></i></a></li>
-      <li class="li2"> <a href=""><i class="iconfont iconcaigoutonggerenbangaobaozhencaigou09 "></i></a>购<br>物<br>车
-      </li>
-
-      <li class="li3"><a href="">
-
-          <i class="iconfont icon5-aixin"></i>
-        </a></li>
-      <li class="li4"><a href=""><i class="iconfont iconqianbao"></i></a></li>
-      <li class="li5"><a href=""><i class="iconfont iconjiaoyin"></i></a></li>
-      <li class="li6"><a href=""><i class="iconfont iconico"></i></a></li>
-      <li class="li7"><a href=""><i class="iconfont iconkefu "></i></a></li>
-      <li class="li8"><a href=""><i class="iconfont iconcc-top "></i></a></li>
-    </ul>
-  </div> -->
-
 
 </body>
 <script src="../js/index.js">
 </script>
 <script>
+
+  if (getCookie("logUser")) {
+    console.log(getCookie("logUser"))
+
+    console.log($('.heads'))
+    $('.heads').text(`欢迎您,${getCookie("logUser")}`);
+  }
+
   var key = "";
   var orderCol = "id";
   var orderType = "asc";
   var showNum = 12;
   var currentPage = 0;
-  // $.ajax({
-  //   url: "../php/goodsList_1.php",
-  //   dataType: "json",
-  //   success(data) {
-  //     console.log(data);
-  //     var html = "";
-  //     data.forEach(({
-  //       goodsId,
-  //       goodsImg,
-  //       goodsImgList,
-  //       goodsName,
-  //       goodsPrice
-  //     }) => {
-  //       html += ` <li>
-  //                  <a href="">
-  //                      <img src="${goodsImg.replace("n5", "n1")}"
-  //                          alt="">
-  //                      <p class="price">￥${goodsPrice}</p>
-  //                      <p class="title">${goodsName}</p>
-  //                  </a>
-  //              </li>`;
-  //     });
-  //     $(".goodsList ul").html(html);
-  //   },
-  //   // error(err) {
-  //   //     console.log(err);
-  //   // }
-  // })
-  // new Page(".box1", {
-  //   count: 100, //  数据的总数量
-  //   showNum: 10, //  每页显示多少条数据 
-  //   showPage: 5, //  默认显示多少页码
 
-  //   // callback(index) { // 页码改变时触发的回调函数
-  //   //     console.log(index);
-  //   // }
-  // })
-
-  // 搜索 排序 和改变showNum时重新调用此方法  => 重新生成分页 和 新的数据
   searchDataAndPage();
 
   // 查询数据  进行分页
@@ -287,7 +240,7 @@
     console.log(currentPage);
     return new Promise(function (resolve, reject) {
       $.ajax({
-        url: "../php/goodsList.php",
+        url: "http://www.2003.com/project/php/goodsList.php",
         data: {
           key,
           orderCol,
@@ -308,6 +261,9 @@
   }
 
 
+
 </script>
+
+
 
 </html>
